--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "build:start": "cd dist && PORT=8080 npx serve",
         "start": "webpack serve --open --mode development",
         "start:live": "webpack serve --open --mode development --live-reload --hot"
+      	"predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+}
+
     },
     "eslintConfig": {
         "extends": [
