--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,13 @@ jobs:
     - name: Build the React app
       run: npm run build
 
+    - name: Configure Git
+      run: |
+        git config --global user.name "${{ github.repository_owner }}"
+        git config --global user.email "${{ secrets.REPOSITORY_OWNER_EMAIL }}"
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./build
