--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^7.1.2",
         "html-webpack-plugin": "^5.6.0",
+        "react-router-dom": "^6.24.1",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.1",
         "typescript": "^5.5.2",
