--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-	"name": "umap-converter",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "senseiusagi.github.io/umap-to-uefn-converter",
-	"dependencies": {
-		"@types/node": "^20.14.9",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"semantic-ui-css": "^2.5.0",
-		"semantic-ui-react": "^2.1.5",
-		"source-map-loader": "^5.0.0",
-		"web-vitals": "^4.2.0",
-		"zustand": "^4.5.4"
-	},
-	"scripts": {
-		"build": "webpack --mode production",
-		"build:dev": "webpack --mode development",
-		"build:start": "cd dist && PORT=8080 npx serve",
-		"start": "webpack serve --open --mode development",
-		"start:live": "webpack serve --open --mode development --live-reload --hot"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@babel/core": "^7.24.7",
-		"@babel/preset-env": "^7.24.7",
-		"clean-webpack-plugin": "^4.0.0",
-		"css-loader": "^7.1.2",
-		"html-webpack-plugin": "^5.6.0",
-		"raw-loader": "^4.0.2",
-		"react-router-dom": "^6.24.1",
-		"style-loader": "^4.0.0",
-		"ts-loader": "^9.5.1",
-		"typescript": "^5.5.2",
-		"webpack": "^5.92.1",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4"
-	}
+    "name": "umap-converter",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "senseiusagi.github.io/umap-to-uefn-converter",
+    "dependencies": {
+        "@types/node": "^20.14.9",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "semantic-ui-css": "^2.5.0",
+        "semantic-ui-react": "^2.1.5",
+        "source-map-loader": "^5.0.0",
+        "web-vitals": "^4.2.0",
+        "zustand": "^4.5.4"
+    },
+    "scripts": {
+        "build": "webpack --mode production",
+        "build:dev": "webpack --mode development",
+        "build:start": "cd build && PORT=8080 npx serve",
+        "start": "webpack serve --open --mode development",
+        "start:live": "webpack serve --open --mode development --live-reload --hot"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
+        "clean-webpack-plugin": "^4.0.0",
+        "css-loader": "^7.1.2",
+        "html-webpack-plugin": "^5.6.0",
+        "raw-loader": "^4.0.2",
+        "react-router-dom": "^6.24.1",
+        "style-loader": "^4.0.0",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.5.2",
+        "webpack": "^5.92.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.4"
+    }
 }
