added logic for world position offset + started additional world modal

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/node": "^20.14.9",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "open3d": "^0.2.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "semantic-ui-css": "^2.5.0",
